FIx margin on small screen

--- a/static/custom.css
+++ b/static/custom.css
@@ -1,18 +1,20 @@
 @import "pelican-blog.css";
 
-a.sc-orcid{
+a.sc-orcid {
   background-color: #A6CE39;
 }
 
-a.sc-instagram{
+a.sc-instagram {
   background-color: #C13584 !important;
 }
 
-nav a:hover,nav a:active,nav a:focus{
+nav a:hover,
+nav a:active,
+nav a:focus {
   color: #ff5a09;
 }
 
-.list li:nth-child(5) a{
+.list li:nth-child(5) a {
   background-image: url(/images/unibo.png);
   background-repeat: no-repeat;
   background-size: contain;
@@ -22,37 +24,45 @@ nav a:hover,nav a:active,nav a:focus{
   background-position-y: 0.3em;
 }
 
-.list li:nth-child(5) a:hover,.list li:nth-child(5) a:active,.list li:nth-child(5) a:focus{
+.list li:nth-child(5) a:hover,
+.list li:nth-child(5) a:active,
+.list li:nth-child(5) a:focus {
   filter: drop-shadow(0 0 0 #C74350) saturate(0) sepia(50%) saturate(1690%) hue-rotate(360deg);
 }
 
-h5{
+h5 {
   margin-bottom: 0rem;
 }
 
-main article header p{
+main article header p {
   font-weight: 400;
   font-size: 1em;
 }
 
-main article{
-  max-width: 75ch;
-  margin: 0 auto 2%;
+@media screen and (min-width: 768px) {
+  main article {
+    max-width: 75ch;
+    margin: 0 auto 2%;
+  }
+}
+
+main article {
   position: relative;
 }
 
-.github-corner svg{
-  fill:#111 !important;
+.github-corner svg {
+  fill: #111 !important;
 }
 
+@media (prefers-color-scheme: dark),
+(prefers-color-scheme: no-preference) {
+  body:not(.light-theme) main article :not(pre)>code {
+    background-color: #282828;
+    border-color: #222;
+  }
+}
 
-@media (prefers-color-scheme: dark), (prefers-color-scheme: no-preference){
-  body:not(.light-theme) main article :not(pre)>code{
-  background-color: #282828;
-  border-color: #222;
-}
-}
-body.dark-theme main article :not(pre)>code{
+body.dark-theme main article :not(pre)>code {
   background-color: #282828;
   border-color: #222;
 }
@@ -71,7 +81,7 @@ body.dark-theme main article :not(pre)>code{
   border-radius: 20px;
   border: 6px solid transparent;
   background-clip: content-box;
-  
+
 }
 
 ::-webkit-scrollbar-thumb:hover {
